<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark"
    tools:context="ru.mikhailskiy.intensiv.ui.movie_details.MovieDetailsFragment">


    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_small"
        android:text="@string/mock_year"
        android:textAppearance="@style/TextViewPrimary"
        app:layout_constraintStart_toStartOf="@+id/genre"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_small"
        android:text="@string/mock_genre"
        android:textAppearance="@style/TextViewPrimary"
        app:layout_constraintStart_toStartOf="@+id/studio"
        app:layout_constraintTop_toBottomOf="@+id/studio" />

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="0dp"
        android:layout_height="215dp"
        android:src="@drawable/ic_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_movie_poster" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin_normal"
        android:layout_marginTop="@dimen/material_margin_normal"
        android:text="@string/mock_film"
        android:textAppearance="@style/TextViewDetailTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

    <Button
        android:id="@+id/button_watch"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/material_margin_normal"
        android:layout_marginTop="@dimen/material_margin_small"
        android:background="@drawable/rounded_button"
        android:text="@string/watch"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/movie_rating"
        style="@style/Base.Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/material_margin_normal"
        tools:rating="4"
        app:layout_constraintBottom_toBottomOf="@+id/button_watch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_watch" />

    <ImageView
        android:id="@+id/iv_4k"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_4k_fullhd"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/description_movie_in_4k_format" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="@dimen/material_margin_normal"
        android:layout_marginTop="@dimen/material_margin_normal"
        android:layout_marginEnd="@dimen/material_margin_normal"
        android:scrollbars="vertical"
        android:text="@string/mock_description"
        android:textAppearance="@style/TextViewDetailDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_watch" />

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin_normal"
        android:layout_marginTop="@dimen/material_margin_normal"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_back_to_previous_page" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin_normal"
        android:layout_marginBottom="@dimen/material_margin_normal"
        android:text="@string/year"
        android:textAllCaps="false"
        android:textAppearance="@style/TextViewPrimaryBold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin_normal"
        android:layout_marginBottom="@dimen/material_margin_small"
        android:text="@string/genre"
        android:textAllCaps="false"
        android:textAppearance="@style/TextViewPrimaryBold"
        app:layout_constraintBottom_toTopOf="@+id/tv_year"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_studio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin_normal"
        android:layout_marginBottom="@dimen/material_margin_small"
        android:text="@string/studio"
        android:textAllCaps="false"
        android:textAppearance="@style/TextViewPrimaryBold"
        app:layout_constraintBottom_toTopOf="@+id/tv_genre"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/actors"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/material_margin_normal"
        android:layout_marginTop="@dimen/material_margin_small"
        android:layout_marginEnd="@dimen/material_margin_normal"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/tv_studio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/studio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin_normal"
        android:text="@string/mock_studio"
        android:textAppearance="@style/TextViewPrimary"
        app:layout_constraintStart_toEndOf="@+id/tv_studio"
        app:layout_constraintTop_toTopOf="@+id/tv_studio" />

    <CheckBox
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_normal"
        android:layout_marginEnd="@dimen/material_margin_normal"
        android:button="@drawable/favorite_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_add_movie_to_favorite" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/movie_poster" />
</androidx.constraintlayout.widget.ConstraintLayout>