<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/blueDark"
    android:layout_marginEnd="@dimen/actor_card_margin_end">

    <TextView
        android:id="@+id/actor_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_small"
        android:text="@string/mock_actor_lastname"
        android:textAppearance="@style/TextViewPrimary"
        app:layout_constraintEnd_toEndOf="@+id/actor_photo"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actor_firstname" />

    <ImageView
        android:id="@+id/actor_photo"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/material_margin_super_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/description_actor_photo" />

    <TextView
        android:id="@+id/actor_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_small"
        android:text="@string/mock_actor_firstname"
        android:textAppearance="@style/TextViewPrimary"
        app:layout_constraintEnd_toEndOf="@+id/actor_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actor_photo" />
</androidx.constraintlayout.widget.ConstraintLayout>